--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,5 +1,7 @@
 lua_package_path '/data/program/orapp/thinklua/lib/?.lua;;';
 
+init_by_lua_file        '/data/program/orapp/thinklua/apps/init.lua';
+
 server {
     listen 8060;
     set $root  /data/program/orapp/thinklua;
