--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,7 +1,5 @@
-lua_package_path '/data/program/orapp/thinklua/lib/?.lua;;';
-
-init_by_lua_file        '/data/program/orapp/thinklua/apps/init.lua';
-
+lua_package_path '/data/program/orapp/thinklua/apps/?.lua;/data/program/orapp/thinklua/lib/?.lua;;';
+init_by_lua_file  '/data/program/orapp/thinklua/apps/init.lua';
 server {
     listen 8060;
     set $root  /data/program/orapp/thinklua;
@@ -9,6 +7,7 @@ server {
     set $template_root $app_root/views;
 
     location / {
+        default_type text/html;
         content_by_lua_file $app_root/bootstrap.lua;
     }
 
