--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,5 +1,5 @@
-lua_package_path '/data/program/orapp/thinklua/apps/?.lua;/data/program/orapp/thinklua/lib/?.lua;;';
-init_by_lua_file  '/data/program/orapp/thinklua/apps/init.lua';
+lua_package_path '/data/program/orapp/thinklua/?.lua;/data/program/orapp/thinklua/apps/?.lua;/data/program/orapp/thinklua/lib/?.lua;;';
+init_by_lua_file  '/data/program/orapp/thinklua/init/init.lua';
 server {
     listen 8060;
     set $root  /data/program/orapp/thinklua;
@@ -7,8 +7,12 @@ server {
     set $template_root $app_root/views;
 
     location / {
+        try_files $uri $uri/ @lua;
+    }
+
+    location @lua {
         default_type text/html;
-        content_by_lua_file $app_root/bootstrap.lua;
+        content_by_lua_file $root/init/bootstrap.lua;
     }
 
     location /static/ {
